--- a/templates/student_common_chats.html
+++ b/templates/student_common_chats.html
@@ -42,7 +42,13 @@
             <div class="col-3">
                 <a href="#" data-target="slide-out" class="sidenav-trigger"><img src="{{ url_for('static', filename='images/user_icon.svg') }}" alt="User" class="user" style="margin-top:30%;width:100%"></a>
             </div>
-            <h5 style="margin-top:7%">Common Greviances</h5>
+            <div class="col-7">
+                <h6 style="margin-top:15%">Common Greviances</h6>
+            </div>
+            <div class="col-2" style="margin-top:7%">
+                <a   onclick="location.reload(true);"> <i class="material-icons">refresh</i></a>
+            </div>
+
         </div>
     <!-- *************** -->
     
